...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_background"
    android:orientation="horizontal"
    android:padding="@dimen/padding_list_item"
    android:weightSum="1"
    android:id="@+id/ll_list_item"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/name_repository"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/my_app_color_title_item_color"
...
