<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/context_view"
    tools:context=".view.fragment.RepositoryFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/my_app_background_color"
        android:dividerHeight="1dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/list_item_repository" />

</FrameLayout>