...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior=".Utils.FloatingActionButtonScrollBehavior"
        app:layout_anchor="@id/srl"
        android:id="@+id/fabLayout"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_grid"
        app:layout_anchorGravity="bottom|end"/>

...
